items and packages done

--- a/public/assets/css/main.css
+++ b/public/assets/css/main.css
@@ -193,6 +193,11 @@ label {
   font-weight: 400;
 }
 
+.itemstext {
+  overflow: scroll;
+  height: 100px;
+}
+
 .display-inline {
   display: inline-block;
 }
