--- a/public/assets/css/main.css
+++ b/public/assets/css/main.css
@@ -36,7 +36,7 @@
 /*  01. Theme default
 /*----------------------------------------*/
 /* 1. Theme default css */
-@import url("https://fonts.googleapis.com/css2?family=Nunito+Sans:wght@300;400;600;700;800;900&family=Roboto:wght@300;400;500;700;900&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Comfortaa:wght@300&family=Spinnaker&display=swap");
 
 body {
   font-family: "Roboto", sans-serif;
