--- a/public/assets/css/main.css
+++ b/public/assets/css/main.css
@@ -6568,21 +6568,22 @@ only screen and (min-width: 768px) and (max-width: 991px) {
 }
 
 .navbar {
-  position: sticky;
+  position: fixed;
   top: 0;
   width: 100%;
+  height: fit-content;
   z-index: 100;
 }
 
 .announce {
   background-color: #075f33;
-  width: 100vw;
+  width: 100%;
+  margin-bottom: 10px;
 }
 
-.announce h6 {
+.announce p {
   color: white;
-  margin: auto;
-  text-align: center;
+  margin-left: 20px;
 }
 
 .tp-prjects-tab-menu .nav-link {
