--- a/public/assets/scss/_common.scss
+++ b/public/assets/scss/_common.scss
@@ -3,131 +3,164 @@
 /*----------------------------------------*/
 
 /* 1. Theme default css */
-@import url('https://fonts.googleapis.com/css2?family=Nunito+Sans:wght@300;400;600;700;800;900&family=Roboto:wght@300;400;500;700;900&display=swap');
- body {
-	font-family: $roboto;
-	font-weight: 400;
+@import url('https://fonts.googleapis.com/css2?family=Raleway&display=swap');
+
+body {
+    font-family: $raleway;
+    font-weight: 400;
     font-style: normal;
-    color:$body-text-color;
+    color: $body-text-color;
     font-size: 16px;
 }
+
 .tp-custom-container {
     max-width: 1630px;
     min-width: 1630px;
     padding-left: 15px;
     padding-right: 15px;
     margin: 0 auto;
+
     @media #{$xxxl} {
         max-width: 1570px;
         min-width: 1570px;
     }
+
     @media #{$xxl,$xl,$lg,$md,$xs} {
         max-width: 100%;
         min-width: 100%;
     }
 }
-.img,img {
-	max-width: 100%;
-	transition: all 1.5s cubic-bezier(0, 0, 0.2, 1);
+
+.img,
+img {
+    max-width: 100%;
+    transition: all 1.5s cubic-bezier(0, 0, 0.2, 1);
 }
+
 .f-left {
-	float: left
+    float: left
 }
+
 .f-right {
-	float: right
+    float: right
 }
+
 .fix {
-	overflow: hidden
+    overflow: hidden
 }
+
 a,
 button,
 i {
-	@include transition(.3s);
+    @include transition(.3s);
     text-decoration: none;
 }
+
 a:focus,
 .button:focus {
-	text-decoration: none;
-	outline: none;
+    text-decoration: none;
+    outline: none;
 }
+
 a:focus,
-a:hover
-{
-	color: inherit;
-	text-decoration: none;
-}
-a,
-button {
-	color: inherit;
-	outline: medium none;
+a:hover {
+    color: inherit;
     text-decoration: none;
 }
-button:hover{
+
+a,
+button {
+    color: inherit;
+    outline: medium none;
+    text-decoration: none;
+}
+
+button:hover {
     color: inherit;
 }
-.nav-link:focus, .nav-link:hover {
+
+.nav-link:focus,
+.nav-link:hover {
     color: inherit;
 }
-button:focus,input:focus,input:focus,textarea,textarea:focus{outline: 0}
+
+button:focus,
+input:focus,
+input:focus,
+textarea,
+textarea:focus {
+    outline: 0
+}
+
 .uppercase {
-	text-transform: uppercase;
+    text-transform: uppercase;
 }
+
 .capitalize {
-	text-transform: capitalize;
+    text-transform: capitalize;
 }
+
 input,
 select,
 textarea {
-    font-family: $roboto;
+    font-family: $raleway;
     font-weight: 400;
     opacity: 1;
 }
+
 h1,
 h2,
 h3,
 h4,
 h5,
 h6 {
-	font-family: $nunitosans;
-	color: $heading-color;
-	margin: 0px;
-	font-style: normal;
-	font-weight: 800;
-	text-transform: normal;
+    font-family: $raleway;
+    color: $heading-color;
+    margin: 0px;
+    font-style: normal;
+    font-weight: 800;
+    text-transform: normal;
     margin-bottom: 10px;
 }
+
 h1 a,
 h2 a,
 h3 a,
 h4 a,
 h5 a,
 h6 a {
-	color: inherit;
+    color: inherit;
 }
+
 ul {
-	margin: 0px;
-	padding: 0px;
+    margin: 0px;
+    padding: 0px;
 }
+
 p {
-	font-size: 16px;
-	font-weight: 400;
-	line-height: 27px;
-	color: $body-text-color;
-	margin-bottom: 10px;
+    font-size: 16px;
+    font-weight: 400;
+    line-height: 27px;
+    color: $body-text-color;
+    margin-bottom: 10px;
 }
+
 i {
     line-height: 1;
     display: inline-block;
 }
+
 label {
-	color: $body-text-color;
-	cursor: pointer;
-	font-size: 14px;
-	font-weight: 400;
+    color: $body-text-color;
+    cursor: pointer;
+    font-size: 14px;
+    font-weight: 400;
 }
+
 .display-inline {
     display: inline-block;
 }
+
 // *::-moz-selection {
 // 	background: $black;
 // 	color: $white;
@@ -147,35 +180,41 @@ select {
     -webkit-appearance: none;
     -moz-appearance: none;
 }
+
 input,
 select {
-   font-family: $roboto;
+    font-family: $raleway;
     font-weight: 400;
 }
+
 .custom-pad-20 {
     padding-left: 10px;
     padding-right: 10px;
 }
+
 .custom-mar-20 {
     margin-right: -10px;
     margin-left: -10px;
 }
+
 .radius-50 {
     border-radius: 50px;
 }
+
 /*--
     - Input Placeholder
 -----------------------------------------*/
 *input::-moz-placeholder {
-	font-size: 16px;
-	opacity: 1;
-    font-family: $roboto;
+    font-size: 16px;
+    opacity: 1;
+    font-family: $raleway;
     font-weight: 400;
 }
+
 *input::placeholder {
-	font-size: 16px;
-	opacity: 1;
-    font-family: $roboto;
+    font-size: 16px;
+    opacity: 1;
+    font-family: $raleway;
     font-weight: 400;
 }
 
@@ -183,119 +222,157 @@ select {
 /*--
     - Common Classes
 -----------------------------------------*/
-.clear{
+.clear {
     clear: both;
 }
 
 .translate-y--10 {
     transform: translateY(-10px);
 }
+
 /*--
     - Background color
 -----------------------------------------*/
 .theme-bg {
     background: $theme-color;
 }
+
 .theme-yellow-bg {
     background: $theme-yellow;
 }
+
 .white-bg {
     background: $white;
 }
+
 .yellow-dark-bg {
     background: $theme-yellow-dark;
 }
+
 .blue-dark-bg {
     background: $theme-blue-dark;
 }
+
 .theme-dark-bg {
     background: $theme-dark-color;
 }
+
 .theme-dark-bg2 {
     background: #041459;
 }
+
 .theme-dark-bg3 {
     background: #18255e;
 }
+
 .grey-bg {
     background: $grey-bg;
 }
+
 .bg-green-light {
     background: #084d2b;
 }
+
 .bg-gray-light {
     background: $grey-bg-light;
 }
+
 /*--
     - color
 -----------------------------------------*/
 .white-color {
-	color: $white;
+    color: $white;
 }
+
 .theme-yelow-color {
-	color: $theme-yellow;
+    color: $theme-yellow;
 }
+
 .theme-blue-color {
-	color: $theme-blue;
+    color: $theme-blue;
 }
+
 .theme-color {
-	color: $theme-color;
+    color: $theme-color;
 }
+
 .font-normal {
     font-weight: 400 !important;
 }
+
 .color-theme-blue {
     color: $theme-blue !important;
 }
+
 .heading-color-black {
     color: $heading-color-black !important;
 }
+
 .heading-color-black-with-hover {
     color: $heading-color-black !important;
+
     &:hover {
         color: $theme-color !important;
     }
 }
+
 /*--
     - Margin & Padding
 -----------------------------------------*/
 /*-- Margin Top --*/
 @for $i from 1 through 40 {
-    .mt-#{5 * $i}{margin-top: 5px * $i;}
+    .mt-#{5 * $i} {
+        margin-top: 5px * $i;
+    }
 }
 
 /*-- Margin Bottom --*/
 @for $i from 1 through 40 {
-    .mb-#{5 * $i}{margin-bottom: 5px *$i;}
+    .mb-#{5 * $i} {
+        margin-bottom: 5px *$i;
+    }
 }
+
 /*-- Margin Left --*/
 @for $i from 1 through 40 {
-    .ml-#{5 * $i}{margin-left: 5px * $i;}
+    .ml-#{5 * $i} {
+        margin-left: 5px * $i;
+    }
 }
 
 /*-- Margin Right --*/
 @for $i from 1 through 40 {
-    .mr-#{5 * $i}{margin-right: 5px *$i;}
+    .mr-#{5 * $i} {
+        margin-right: 5px *$i;
+    }
 }
 
 /*-- Padding Top --*/
 @for $i from 1 through 40 {
-    .pt-#{5 * $i}{padding-top: 5px *$i;}
+    .pt-#{5 * $i} {
+        padding-top: 5px *$i;
+    }
 }
 
 /*-- Padding Bottom --*/
 @for $i from 1 through 40 {
-    .pb-#{5 * $i}{padding-bottom: 5px *$i;}
+    .pb-#{5 * $i} {
+        padding-bottom: 5px *$i;
+    }
 }
 
 /*-- Padding Left --*/
 @for $i from 1 through 40 {
-    .pl-#{5 * $i}{padding-left: 5px *$i;}
+    .pl-#{5 * $i} {
+        padding-left: 5px *$i;
+    }
 }
 
 /*-- Padding Right --*/
 @for $i from 1 through 40 {
-    .pr-#{5 * $i}{padding-right: 5px *$i;}
+    .pr-#{5 * $i} {
+        padding-right: 5px *$i;
+    }
 }
 
 
@@ -307,40 +384,51 @@ select {
     font-size: 16px;
     font-weight: 500;
 }
+
 .tp-section-title,
 .tp-section-title-two {
     font-size: 55px;
     line-height: 1.18;
+
     @media #{$xl} {
         font-size: 48px;
     }
+
     @media #{$lg} {
         font-size: 40px;
     }
+
     @media #{$md} {
         font-size: 36px;
     }
+
     @media #{$xs} {
         font-size: 32px;
+
         & br {
             display: none;
         }
     }
+
     @media #{$sm} {
         & br {
             display: inline-block;
         }
     }
 }
+
 .tp-section-title-two {
     color: $heading-color-black;
+
     & span {
         color: $theme-color;
+
         &.theme-yellow {
             color: $theme-yellow;
         }
     }
 }
+
 .tp-section-subtitle-three {
     font-size: 18px;
     color: $theme-color;
@@ -365,11 +453,13 @@ select {
     position: relative;
     overflow: hidden;
     display: inline-block;
+
     &:hover {
         background: $theme-color;
         color: $white;
     }
 }
+
 .theme-btn {
     font-size: 16px;
     display: inline-block;
@@ -386,11 +476,13 @@ select {
     cursor: pointer;
     position: relative;
     overflow: hidden;
+
     &:hover {
         background: $theme-yellow;
         color: $body-text-color;
     }
 }
+
 .yellow-btn,
 .theme-btn {
     &:before {
@@ -401,17 +493,19 @@ select {
         position: absolute;
         top: -35px;
         transform: rotate(35deg);
-        transition: all 1600ms cubic-bezier(.19,1,.22,1);
+        transition: all 1600ms cubic-bezier(.19, 1, .22, 1);
         width: 40px;
         opacity: 0;
     }
+
     &:hover {
         &:before {
             left: 120%;
-            transition: all 1300ms cubic-bezier(.19,1,.22,1);
+            transition: all 1300ms cubic-bezier(.19, 1, .22, 1);
             opacity: .25;
         }
     }
+
     & i {
         vertical-align: middle;
         display: inline-block;
@@ -419,14 +513,17 @@ select {
         line-height: 1;
     }
 }
+
 .hover-theme-color:hover {
     color: $theme-color;
 }
+
 .progress-wrap {
     @media #{$xs} {
         right: 30px;
     }
 }
+
 //custom z-index
 .z-index {
     z-index: 2;
@@ -434,11 +531,15 @@ select {
 }
 
 //custom swipper dots
-.swiper-pagination-fraction, .swiper-pagination-custom, .swiper-container-horizontal > .swiper-pagination-bullets {
+.swiper-pagination-fraction,
+.swiper-pagination-custom,
+.swiper-container-horizontal>.swiper-pagination-bullets {
     width: inherit;
 }
+
 .swiper-container-horizontal.common-dots {
     position: relative;
+
     & .slide-dots {
         position: absolute;
         bottom: 0px;
@@ -446,7 +547,8 @@ select {
         transform: translateX(-50%);
     }
 }
-.swiper-container-horizontal > .swiper-pagination-bullets .swiper-pagination-bullet {
+
+.swiper-container-horizontal>.swiper-pagination-bullets .swiper-pagination-bullet {
     display: inline-block;
     margin: 0px 5px;
     padding: 0px;
@@ -460,6 +562,7 @@ select {
     background: none;
     font-size: 0px;
     opacity: 1;
+
     &.swiper-pagination-bullet-active {
         border-color: $theme-color;
     }
@@ -467,64 +570,65 @@ select {
 
 
 .swiper-container .swiper-pagination-bullets {
-    position: absolute ;
-    top: 50% ;
-    transform: translateY(-50%) ;
-    left: 80px ;
-    z-index: 5 ;
-    width: 20px ;
-    bottom: auto ;
+    position: absolute;
+    top: 50%;
+    transform: translateY(-50%);
+    left: 80px;
+    z-index: 5;
+    width: 20px;
+    bottom: auto;
 }
 
 .swiper-container .swiper-pagination-bullet.swiper-pagination-bullet-active {
-    height: 6px ;
-    width: 6px ;
-    background: #06ae5a ;
-    margin: 11px ;
-    margin-left: 9px ;
-    transform: translateY(2px) ;
+    height: 6px;
+    width: 6px;
+    background: #06ae5a;
+    margin: 11px;
+    margin-left: 9px;
+    transform: translateY(2px);
     position: relative;
     margin: 4px 8px;
 }
 
 .swiper-container .swiper-pagination-bullet {
-    font-size: 0px ;
-    height: 12px ;
-    width: 12px ;
-    padding: 3px ;
-    background: #97bdaa ;
-    cursor: pointer ;
-    border-radius: 50% ;
-    border: none ;
-    display: inline-block ;
-    outline: none ;
-    position: relative ;
-    margin: 6px ;
-    opacity: 1 ;
+    font-size: 0px;
+    height: 12px;
+    width: 12px;
+    padding: 3px;
+    background: #97bdaa;
+    cursor: pointer;
+    border-radius: 50%;
+    border: none;
+    display: inline-block;
+    outline: none;
+    position: relative;
+    margin: 6px;
+    opacity: 1;
 }
 
 .swiper-container .swiper-pagination-bullet.swiper-pagination-bullet-active::before {
     content: '';
     position: absolute;
-    border-color: #06ae5a ;
+    border-color: #06ae5a;
 }
 
 .swiper-container .swiper-pagination-bullet::before {
-    position: absolute ;
-    content: "" ;
-    height: 18px ;
-    width: 18px ;
-    border-radius: 50% ;
-    border: 2px solid transparent ;
-    top: -6px ;
-    left: -6px ;
+    position: absolute;
+    content: "";
+    height: 18px;
+    width: 18px;
+    border-radius: 50%;
+    border: 2px solid transparent;
+    top: -6px;
+    left: -6px;
 }
 
 @media #{$xs} {
     .swiper-slide {
-    padding: 10px;
+        padding: 10px;
+    }
 }
-}
+
 .tp-slider-video-btn button {
     height: 90px;
     line-height: 90px;
@@ -539,6 +643,7 @@ select {
     z-index: 2;
     border: none;
 }
+
 .tp-slider-video-btn-two button {
     height: 80px;
     line-height: 80px;
@@ -553,6 +658,3 @@ select {
     z-index: 2;
     border: none;
 }
-
-
-
