--- a/public/assets/css/navbar.css
+++ b/public/assets/css/navbar.css
@@ -47,6 +47,11 @@
     margin-right: 2rem;
 }
 
+.nav-menu .active {
+    color: #fff;
+}
+
+
 .nav-links {
     text-transform: capitalize;
     color: #ffde59;
@@ -55,6 +60,10 @@
     transition: color 0.3s ease;
     text-decoration: none;
     cursor: pointer;
+}
+
+.nav-links:active {
+    color: #fff;
 }
 
 .iconn {
@@ -70,14 +79,9 @@
     margin-right: 1rem;
 }
 
-/* .nav-item:after {
-    content: "";
-    display: block;
-    height: 3px;
-    width: 0;
-    background: transparent;
-    transition: width 0.7s ease, background-color 0.5s ease;
-} */
+.nav-item:after {
+    color: #fff;
+}
 
 .nav-item:hover {
     color: #fff;
