--- a/public/assets/css/main.css
+++ b/public/assets/css/main.css
@@ -3771,6 +3771,21 @@ only screen and (min-width: 768px) and (max-width: 991px) {
   display: inline-block;
 }
 
+.check-icon {
+  margin-top: 20px;
+  margin-bottom: 20px;
+}
+
+.conf-text1 {
+  margin-top: 150px;
+  margin-bottom: 40px;
+}
+
+.conf-text2 {
+  margin-top: 40px;
+  margin-bottom: 150px;
+}
+
 .tp-newsletter-area-three form {
   position: relative;
 }
