--- a/public/assets/scss/_footer.scss
+++ b/public/assets/scss/_footer.scss
@@ -6,11 +6,13 @@
         padding-bottom: 60px;
     }
 }
+
 .tp-footer-widget-title {
     font-size: 24px;
     color: $white;
     position: relative;
     padding-bottom: 10px;
+
     &:before {
         position: absolute;
         content: '';
@@ -21,6 +23,7 @@
         bottom: 0px;
     }
 }
+
 .tp-footer-info {
     & h4 {
         font-size: 24px;
@@ -28,6 +31,7 @@
         color: $white;
         font-family: $roboto;
     }
+
     & h6 {
         font-size: 16px;
         font-weight: 400;
@@ -35,6 +39,7 @@
         font-family: $roboto;
         line-height: 1.6;
         display: inline-flex;
+
         & i {
             font-size: 16px;
             color: $white;
@@ -42,6 +47,7 @@
             transform: translateY(4px);
         }
     }
+
     &-social {
         & a {
             height: 40px;
@@ -54,32 +60,39 @@
             background: #347b58;
             margin-right: 10px;
             text-align: center;
+
             &:last-child {
                 margin-right: 0px;
             }
+
             &:hover {
                 color: $white;
-                background: #084d2b;
+                background: #0071A8;
             }
         }
     }
 }
+
 .tp-footer-widget {
     & ul {
-        & li{
+        & li {
             list-style: none;
             margin-bottom: 16px;
+
             &:last-child {
                 margin-bottom: 0px;
             }
-            & a{
+
+            & a {
                 font-size: 16px;
                 position: relative;
                 color: $white;
+
                 &:hover {
                     padding-left: 5px;
                     color: $theme-yellow;
                 }
+
                 &:before {
                     content: '\f054';
                     font-size: 12px;
@@ -92,6 +105,7 @@
         }
     }
 }
+
 .tp-footer-news-single {
     & h6 {
         font-size: 16px;
@@ -100,57 +114,72 @@
         color: $white;
         line-height: 27px;
         margin-bottom: 5px;
+
         @media #{$lg,$sm} {
             line-height: 19px;
         }
+
         &:hover {
             color: $theme-yellow;
         }
     }
+
     & span {
         display: block;
         color: $white;
         font-size: 16px;
     }
 }
+
 .tp-footer-insta {
     display: flex;
     margin-left: -5px;
     margin-right: -5px;
     flex-wrap: wrap;
+
     & a {
         width: 33.33%;
         padding: 0px 5px;
         margin-bottom: 10px;
         display: block;
+
         & img {
             width: 100%;
         }
     }
 }
+
 .footer-col-2 {
     padding-left: 50px;
+
     @media #{$lg} {
         padding-left: 30px;
     }
+
     @media #{$md,$xs} {
         padding-left: 0px;
     }
 }
+
 .footer-col-3 {
     padding-left: 30px;
+
     @media #{$lg} {
         padding-left: 5px;
-     }
-     @media #{$md,$xs} {
+    }
+
+    @media #{$md,$xs} {
         padding-left: 0px;
     }
 }
+
 .footer-col-4 {
     padding-left: 30px;
+
     @media #{$lg} {
         padding-left: 10px;
     }
+
     @media #{$md,$xs} {
         padding-left: 0px;
     }
@@ -158,43 +187,55 @@
 
 .tp-footer-subscribe-title {
     font-size: 36px;
+
     @media #{$xs} {
         font-size: 28px;
     }
+
     @media #{$lg} {
         font-size: 32px;
     }
 }
+
 .tp-footer-subscribe-form {
     & form {
         display: flex;
         justify-content: end;
         padding-right: 80px;
+
         @media #{$xl} {
             padding-right: 50px;
-         }
-         @media #{$lg} {
+        }
+
+        @media #{$lg} {
             padding-right: 30px;
-         }
-         @media #{$md,$xs} {
+        }
+
+        @media #{$md,$xs} {
             justify-content: start;
-         }
-         @media #{$xs} {
+        }
+
+        @media #{$xs} {
             padding-right: 0px;
             display: inherit;
-         }
-         @media #{$sm} {
+        }
+
+        @media #{$sm} {
             display: flex;
-         }
+        }
+
         & .tp-footer-subscribe-form-field {
             position: relative;
             margin-right: 10px;
+
             @media #{$xs} {
                 margin-right: 0px;
-             }
-             @media #{$sm} {
+            }
+
+            @media #{$sm} {
                 margin-right: 10px;
-             }
+            }
+
             & input {
                 height: 60px;
                 width: 420px;
@@ -205,18 +246,22 @@
                 border: none;
                 background: $white;
                 outline: none;
+
                 @media #{$xl,$lg} {
                     width: 350px;
-                 }
-                 @media #{$xs} {
+                }
+
+                @media #{$xs} {
                     width: 100%;
                     padding-left: 15px;
-                 }
-                 @media #{$sm} {
+                }
+
+                @media #{$sm} {
                     width: 330px;
                     padding-left: 25px;
-                 }
+                }
             }
+
             & i {
                 font-size: 16px;
                 color: $body-text-color;
@@ -226,9 +271,11 @@
                 right: 25px;
             }
         }
+
         & .tp-footer-subscribe-form-btn {
             & button {
                 background: $body-text-color;
+
                 &:hover {
                     background: $theme-color;
                     color: $white;
@@ -237,6 +284,7 @@
         }
     }
 }
+
 .tp-footer-subscribe-area {
     &::before {
         position: absolute;
@@ -247,38 +295,45 @@
         top: 0px;
         left: 0px;
         z-index: 1;
+
         @media #{$xs} {
             width: 100%;
         }
     }
 }
+
 .tp-footer-subscribe-shape {
     position: absolute;
     height: 60px;
-    background: #084d2b;
+    background: #0071A8;
     bottom: 0px;
     left: 0px;
     right: 0px;
     width: 100%;
 }
+
 .tp-copyright {
     & p {
         font-size: 18px;
         line-height: 1.3;
         color: $white;
+
         @media #{$xs} {
             font-size: 16px;
         }
+
         & span {
             color: $theme-color;
         }
     }
 }
+
 .tp-footer-subscribe-bg {
     @media #{$md,$xs} {
         padding-top: 20px;
     }
 }
+
 .tp-copyright-area {
     @media #{$xs} {
         padding-top: 20px;
@@ -292,17 +347,19 @@
 .tp-footer-subscribe-bg-two {
     @media #{$md,$xs} {
         padding: 20px 30px 20px 30px;
-    } 
+    }
 }
+
 .tp-footer-subscribe-form form .tp-footer-subscribe-form-field input {
     @media #{$sm} {
         width: 270px;
-    } 
+    }
 }
+
 .tp-copyright-area-two {
     @media #{$xs} {
         padding: 20px 0px;
-    } 
+    }
 }
 
 
@@ -310,48 +367,59 @@
 .tp-footer-info-three {
     & p {
         padding-right: 21px;
+
         @media #{$xs} {
             padding-right: 0px;
         }
     }
 }
+
 .tp-footer-info-social-three {
     & a {
         border-radius: 0px;
         background: #36437a;
+
         &:hover {
             background: $theme-color;
         }
     }
 }
+
 .footer-col-3-3 {
     padding-left: 15px;
 }
+
 .tp-footer-news-three-single {
     &-img {
         width: 80px;
         float: left;
         margin-right: 20px;
+
         @media #{$lg,$xs} {
             margin-right: 10px;
         }
     }
+
     &-text {
         overflow: hidden;
+
         & p {
             color: #fefefe;
         }
     }
 }
+
 .tp-footer-newsletter-three {
     & p {
         color: $white;
         font-size: 16px;
         line-height: 1;
+
         @media #{$xl,$lg,$md,$xs} {
             line-height: 1.3;
         }
     }
+
     & form {
         & input {
             height: 60px;
@@ -364,6 +432,7 @@
             border: 0px;
             outline: none;
         }
+
         & .tp-footer-newsletter-three-field {
             & i {
                 position: absolute;
@@ -373,9 +442,11 @@
                 right: 20px;
             }
         }
+
         & button {
             color: $theme-blue;
             border-radius: 50px;
+
             &:hover {
                 color: $white;
             }
