--- a/public/assets/scss/_common.scss
+++ b/public/assets/scss/_common.scss
@@ -582,7 +582,7 @@ select {
 .swiper-container .swiper-pagination-bullet.swiper-pagination-bullet-active {
     height: 6px;
     width: 6px;
-    background: #06ae5a;
+    background: #0071a8;
     margin: 11px;
     margin-left: 9px;
     transform: translateY(2px);
@@ -609,7 +609,7 @@ select {
 .swiper-container .swiper-pagination-bullet.swiper-pagination-bullet-active::before {
     content: '';
     position: absolute;
-    border-color: #06ae5a;
+    border-color: #0071a8;
 }
 
 .swiper-container .swiper-pagination-bullet::before {
@@ -633,7 +633,7 @@ select {
     height: 90px;
     line-height: 90px;
     width: 90px;
-    background: #06ae5a;
+    background: #0071a8;
     text-align: center;
     display: inline-block;
     border-radius: 50%;
@@ -648,7 +648,7 @@ select {
     height: 80px;
     line-height: 80px;
     width: 80px;
-    background: #06ae5a;
+    background: #0071a8;
     text-align: center;
     display: inline-block;
     border-radius: 50%;
