--- a/public/assets/css/custom-animation.css
+++ b/public/assets/css/custom-animation.css
@@ -664,7 +664,7 @@
 
 @keyframes pulse-green {
     0% {
-        box-shadow: 0 0 0 0 #06ae5a;
+        box-shadow: 0 0 0 0 #0071a8;
     }
 
     50% {
@@ -756,18 +756,23 @@
     16.65% {
         transform: translateY(8px);
     }
+
     33.3% {
         transform: translateY(-6px);
     }
+
     49.95% {
         transform: translateY(4px);
     }
+
     66.6% {
         transform: translateY(-2px);
     }
+
     83.25% {
         transform: translateY(1px);
     }
+
     100% {
         transform: translateY(0);
     }
@@ -777,18 +782,23 @@
     16.65% {
         transform: translateY(8px);
     }
+
     33.3% {
         transform: translateY(-6px);
     }
+
     49.95% {
         transform: translateY(4px);
     }
+
     66.6% {
         transform: translateY(-2px);
     }
+
     83.25% {
         transform: translateY(1px);
     }
+
     100% {
         transform: translateY(0);
     }
@@ -798,12 +808,15 @@
     0% {
         transform: scale(1);
     }
+
     50% {
         transform: scale(0.5);
     }
+
     75% {
         transform: scale(0.7);
     }
+
     100% {
         transform: scale(1);
     }
@@ -813,52 +826,65 @@
     0% {
         transform: scale(1);
     }
+
     50% {
         transform: scale(0.5);
     }
+
     75% {
         transform: scale(0.7);
     }
+
     100% {
         transform: scale(1);
     }
 }
 
 @-webkit-keyframes phone-icon-animate {
+
     0%,
     100% {
         transform: rotate(0)scale(1)skew(1deg);
     }
+
     10% {
         transform: rotate(-25deg)scale(1)skew(1deg);
     }
+
     20%,
     40% {
         transform: rotate(25deg)scale(1)skew(1deg);
     }
+
     30% {
         transform: rotate(-25deg)scale(1)skew(1deg);
     }
+
     50% {
         transform: rotate(0)scale(1)skew(1deg);
     }
 }
 
 @keyframes phone-icon-animate {
+
     0%,
     100% {
         transform: rotate(0)scale(1)skew(1deg);
     }
+
     10% {
         transform: rotate(-25deg)scale(1)skew(1deg);
     }
+
     20%,
     40% {
         transform: rotate(25deg)scale(1)skew(1deg);
     }
+
     30% {
         transform: rotate(-25deg)scale(1)skew(1deg);
     }
+
     50% {
         transform: rotate(0)scale(1)skew(1deg);
     }
@@ -866,77 +892,71 @@
 
 /*--- preloader ---*/
 .dark #preloader {
-  background-color: #232323;
+    background-color: #232323;
 }
 
 #preloader {
-  position: fixed;
-  top: 0;
-  left: 0;
-  right: 0;
-  bottom: 0;
-  background-color: #fff;
-  z-index: 999999;
+    position: fixed;
+    top: 0;
+    left: 0;
+    right: 0;
+    bottom: 0;
+    background-color: #fff;
+    z-index: 999999;
 }
 
 .preloader {
-  width: 50px;
-  height: 50px;
-  display: inline-block;
-  padding: 0px;
-  text-align: left;
-  box-sizing: border-box;
-  position: absolute;
-  top: 50%;
-  left: 50%;
-  margin-left: -25px;
-  margin-top: -25px;
+    width: 50px;
+    height: 50px;
+    display: inline-block;
+    padding: 0px;
+    text-align: left;
+    box-sizing: border-box;
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    margin-left: -25px;
+    margin-top: -25px;
 }
 
 .preloader span {
-  position: absolute;
-  display: inline-block;
-  width: 50px;
-  height: 50px;
-  border-radius: 100%;
-  background: #06ae5a;
-  -webkit-animation: preloader 1.3s linear infinite;
-  animation: preloader 1.3s linear infinite;
+    position: absolute;
+    display: inline-block;
+    width: 50px;
+    height: 50px;
+    border-radius: 100%;
+    background: #0071a8;
+    -webkit-animation: preloader 1.3s linear infinite;
+    animation: preloader 1.3s linear infinite;
 }
 
 .preloader span:last-child {
-  animation-delay: -0.8s;
-  -webkit-animation-delay: -0.8s;
+    animation-delay: -0.8s;
+    -webkit-animation-delay: -0.8s;
 }
 
 @keyframes preloader {
-  0% {
-    transform: scale(0, 0);
-    opacity: 0.5;
-  }
+    0% {
+        transform: scale(0, 0);
+        opacity: 0.5;
+    }
 
-  100% {
-    transform: scale(1, 1);
-    opacity: 0;
-  }
+    100% {
+        transform: scale(1, 1);
+        opacity: 0;
+    }
 }
 
 @-webkit-keyframes preloader {
-  0% {
-    -webkit-transform: scale(0, 0);
-    opacity: 0.5;
-  }
+    0% {
+        -webkit-transform: scale(0, 0);
+        opacity: 0.5;
+    }
 
-  100% {
-    -webkit-transform: scale(1, 1);
-    opacity: 0;
-  }
+    100% {
+        -webkit-transform: scale(1, 1);
+        opacity: 0;
+    }
 }
 
 /*--- end of preloader ---*/
-
-
-
-
-
-
